<resources>
    <string name="app_name">Sefricam v4</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">lnDmaHV1WzIn9pFAVdplY0vZNTWfNoQidKppqRyz</string>
    <string name="back4app_client_key">dYLCw4So2tLDJVcAdGTFwnObVyPToAQAkNaAWneB</string>


    <!-- Text Views -->
    <!-- Pantalla Bienvenida -->
    <string name="tv_Bienvenida">Bienvenido a Sefricam</string>

    <!-- Pantalla Login -->
    <string name="tv_ContrasenaOlvidada">¿Ha olvidado su contraseña?</string>

    <!-- Pantalla Recuperar Contraseña -->
    <string name="tv_IntroduzcaSuEmail">Introduzca su email para recuperar su contraseña:</string>

    <!-- Pantalla Menu Principal -->
    <string name="tv_Localizacion">Localización:</string>
    <string name="tv_FechaDeToma">Fecha de toma de datos:</string>
    <string name="tv_FechaVacia">__-__-____</string>
    <string name="tv_NumeroGrupo">Numero de Grupo:</string>
    <string name="tv_DNI">DNI:</string>
    <!-- Pantalla Datos de Aves -->

    <!-- Pantalla Datos de Entorno -->

    <!-- Pantalla Metodos de Captura -->

    <!-- Pantalla Datos de Avistamiento -->



    <!-- Texto Botones -->
    <!-- Pantalla Bienvenida -->
    <string name="btn_Comenzar">Comenzar</string>

    <!-- Pantalla Login -->
    <string name="btn_IniciarSesion">Iniciar Sesión</string>

    <!-- Pantalla Recuperar Contraseña -->
    <string name="btn_RecuperarContrasena">Recuperar contraseña</string>

    <!-- Pantalla Menu Principal -->
    <string name="btn_LocalizacionActual">Localizacion Actual</string>
    <string name="btn_DatosAves">Datos Aves</string>
    <string name="btn_DatosEntorno">Datos Entorno</string>
    <string name="btn_MetodosCaptura">Metodos de Captura</string>
    <string name="btn_DatosAvistamientos">Datos avistamientos</string>
    <string name="btn_Salir">Salir</string>
    <!-- Pantalla Datos de Aves -->

    <!-- Pantalla Datos de Entorno -->

    <!-- Pantalla Metodos de Captura -->

    <!-- Pantalla Datos de Avistamiento -->



    <!-- Hints -->
    <!-- Pantalla Login -->
    <string name="hint_email">Introduzca su email</string> <!-- Compartido con recuperar contraseña -->
    <string name="hint_contrasena">Introduzca su contraseña</string> <!-- Compartido con recuperar contraseña -->

    <!-- Pantalla Menu Principal -->
    <string name="hint_Latitud">LATITUD</string>
    <string name="hint_Longitud">LONGITUD</string>

    <!-- Pantalla Datos de Aves -->

    <!-- Pantalla Datos de Entorno -->
    <string name="rb_PlantaNo">No</string>
    <string name="rb_PlantaPresente">Pres.</string>
    <string name="rb_PlantaAbundante">Abun.</string>

    <!-- Pantalla Metodos de Captura -->

    <!-- Pantalla Datos de Avistamiento -->


    <string name="DELIMITADOR">DELIMITADOR</string>
    <string name="hint_ValorPredeterminadoAvistamiento">0</string>

    <!-- Nombres Pajaros -->
    <string name="tv_camachuelo">Camachuelo</string>
    <string name="tv_jilguero">Jilguero</string>
    <string name="tv_lugano">Lúgano</string>
    <string name="tv_pardillo_comun">Pard. Común</string>
    <string name="tv_picogordo">Picogordo</string>
    <string name="tv_pinzon_comun">Pinzón Común</string>
    <string name="tv_pinzon_real">Pinzón Real</string>
    <string name="tv_piquituerto">Piquituerto</string>
    <string name="tv_verdecillo">Verdecillo</string>
    <string name="tv_verderon_comun">V. Común</string>
    <string name="tv_verderon_serrano">V. Serrano</string>


    <!-- Comunes -->
    <string name="btn_Guardar">Guardar</string>
    <string name="btn_Volver">Volver</string>
    <string name="et_ValorPredeterminado0">0</string>


    <string name="cb_Especie01">Azotacristos</string>
    <string name="cb_Especie02">Cardillo</string>
    <string name="cb_Especie03">C. Borriquero</string>
    <string name="cb_Especie04">C. Cabeza pollo</string>
    <string name="cb_Especie05">C. Corredor</string>
    <string name="cb_Especie06">C. Cuco</string>
    <string name="cb_Especie07">C. de calvero</string>
    <string name="cb_Especie08">C. Cardador</string>
    <string name="cb_Especie09">C. Delgado</string>
    <string name="cb_Especie10">C. Estrellado</string>
    <string name="cb_Especie11">C. Gigante</string>
    <string name="cb_Especie12">C. Mariano</string>
    <string name="cb_Especie13">C. Quesero</string>
    <string name="cb_Especie14">Garmon./Escob.</string>
    <string name="cb_Especie15">Girasol</string>
    <string name="cb_Especie16">Olivarda</string>
    <string name="cb_Especie17">Olivardilla</string>
    <string name="cb_Especie18">Coniza</string>
    <string name="cb_Especie19">Lechuguilla</string>
    <string name="cb_Especie20">Ajonjera</string>
    <string name="cb_Especie21">Achicoria azul</string>
    <string name="cb_Especie22">Cenizo</string>
    <string name="cb_Especie23">Cerraja</string>
    <string name="cb_Especie24">Chupamiel</string>
    <string name="cb_Especie25">Corremundo</string>
    <string name="cb_Especie26">Garamasta</string>
    <string name="cb_Especie27">Hierba cana</string>
    <string name="cb_Especie28">H. de Santiago</string>
    <string name="cb_Especie29">Jaram./Raba.</string>
    <string name="cb_Especie30">Lavan./Can.</string>
    <string name="cb_Especie31">Ortiga Menor</string>
    <string name="cb_Especie32">Romero</string>
    <string name="cb_Especie33">Verrucaria</string>
    <string name="cb_Especie34">Vivorera</string>
    <string name="cb_Especie35">Zurron de pastor</string>
    <string name="cb_Especie36">Matapulgas</string>
    <string name="PMMC_btn_Modificar">Modificar</string>
    <string name="PME_NoDataFound">No se han encontrado datos</string>
    <string name="PDA_btn_Modificar">Modificar</string>
    <string name="opt_A">Abund</string>
    <string name="opt_N">No</string>
    <string name="opt_S">Pres.</string>
    <string name="opt_MA">M. Abund.</string>
    <string name="contentDescription_LogoAves">Logo Grande de Aves</string>
    <string name="HoraDeCapturaDelAve">Hora de captura del ave:</string>
    <string name="HoraCapturaDelAveEmpty">--:--</string>
    <string name="SeleccioneLaEspecie">Seleccione la especie:</string>
    <string name="rb_PadrCom">Pardillo Común</string>
    <string name="rb_VerdCom">Verderón Común</string>
    <string name="rb_VerdSerr">Verderón Serrano</string>
    <string name="tv_EjemCaptura">Ejemplares Capturados</string>
    <string name="etnd_LongitudTarso">Longitud del tarso (cm)</string>
    <string name="etnd_LongitudPico">Longitud del pico (cm)</string>
    <string name="etnd_LongitudTerceraPrimaria">Longitud tercera primaria (cm)</string>
    <string name="etnd_LongitudCola">Longitud cola (cm)</string>
    <string name="tv_Local">Local</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="indeterminado">Indeterminado</string>
    <string name="sexo">Sexo</string>
    <string name="macho">Macho</string>
    <string name="hembra">Hembra</string>
    <string name="edad">Edad</string>
    <string name="juvenil">Juvenil</string>
    <string name="adulto">Adulto</string>
    <string name="condicion_fisica">Condicion Fisica</string>
    <string name="buena">Buena</string>
    <string name="presenta_lesiones">Presenta Lesiones</string>
    <string name="sintomas_de_enfermedad">Sintomas de enfermedad</string>
    <string name="malformacion">Malformacion</string>
    <string name="grasa">Grasa</string>
    <string name="ausente">Ausente</string>
    <string name="interclavicular">Interclavicular</string>
    <string name="inter_abdominal">Inter. + Abdominal</string>
    <string name="inter_abdominal_pectoral">Inter. + Abdominal + Pectoral</string>
    <string name="m_sculo_pectoral">Músculo Pectoral</string>
    <string name="quilla_evidente">Quilla evidente</string>
    <string name="quilla_distinguible">Quilla distinguible</string>
    <string name="quilla_ligera">Quilla ligera</string>
    <string name="no_marca_quilla">No marca quilla</string>
    <string name="muda">Muda</string>
    <string name="en_curso">En curso</string>
    <string name="terminada">Terminada</string>
    <string name="placa_incubatriz">Placa incubatriz</string>
    <string name="no_evidencia">No evidencia</string>
    <string name="incompleta">Incompleta</string>
    <string name="muy_evidente">Muy evidente</string>
    <string name="observaciones">Observaciones:</string>
    <string name="enviar">Enviar</string>
    <string name="volver">Volver</string>
    <string name="introduzca_la_temperatura">Introduzca la temperatura:</string>
    <string name="temperatura_incio">Temperatura Incio</string>
    <string name="temperatura_fin">Temperatura Fin</string>
    <string name="zonificacion">Zonificacion por uso del Suelo</string>
    <string name="zonificacion_01">Afloramientos Rocosos y Rasos</string>
    <string name="zonificacion_02">Cultivos</string>
    <string name="zonificacion_03">Láminas y Cursos de Agua</string>
    <string name="zonificacion_04">Dehesa y zonas adehesadas</string>
    <string name="zonificacion_05">Plantaciones de Frondosas y Coníferas</string>
    <string name="zonificacion_06">Vegetación Arbórea de Coníferas</string>
    <string name="zonificacion_07">Vegetación Arbórea de Frondosas</string>
    <string name="zonificacion_08">Vegetación de Matorral</string>
    <string name="zonificacion_09">Vegetación Herbácea</string>
    <string name="zonificacion_10">Viñedos, Olivares y Otros Frutales</string>
    <string name="zonificacion_11">Zonas Artificiales</string>
    <string name="viento">Viento (Marque la correspondiente)</string>
    <string name="viento_01">CALMA</string>
    <string name="viento_02">LIGERO</string>
    <string name="viento_03">FUERTE</string>

</resources>